test/libsolidity/syntaxTests/literalSuffixes/application/invalid_suffixed_suffixed_integer.sol
function suffix(uint value) pure returns (uint) { return value; }

contract C {
    uint x = 1000 suffix suffix;
}
// ----
// ParserError 2314: (105-111): Expected ';' but got identifier
